--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+
 
         
 
@@ -24,19 +24,19 @@
     <body>
         <header>
             <nav class="navbar navbar-expand-md">
-                <a class="navbar-brand text-light">Chase Roehl</a> <!-- Change a -->
+                <h1 class="navbar-brand text-light" style="margin-left: 10px">Chase Roehl</h1>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link active text-light" href="#">Home <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link text-light" href="#">Experience</a>
-                        <a class="nav-item nav-link text-light" href="#">Pricing</a>
-                        <a class="fa-brands fa-github" href="https://github.com/roecha" target="_blank"></a> 
+                        <a class="nav-item nav-link" href="#about">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="#experience">Experience</a>
+                        <a class="fa-brands fa-github nav-item" href="https://github.com/roecha" target="_blank"></a> 
                     </div>
                 </div>
             </nav>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         </header>
 
         <div class="row">
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="col-md-7 about-container">
-                <div class="about">
+                <div class="about" id="about">
                     <h1 >Software Developer</h1>
                     <section>
                         <h2>About</h2>
@@ -87,8 +87,8 @@
                             </div>
                         </div>
                     </section>
-                    <section>
-                        <h2 id="experience">Experience</h2>
+                    <section id="experience">
+                        <h2>Experience</h2>
                         <div class="row experience">
                             <h4 class="col-3">2021-2023</h4>
                             <div class="col">
@@ -98,9 +98,11 @@
                         </div>
                     </section>
                     <section>
+                        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
                         <h2>Languages & Tools</h2>
                         <h4 class="langs-and-tools">Languages</h4>
-                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                        <div class="accordion accordion-flush" id="accordion-flush-langs">
                             <div class="accordion-item">
                               <h4 class="accordion-header" id="flush-headingOne">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -111,7 +113,7 @@
                                   </div>
                                 </button>
                               </h4>
-                              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordion-flush-langs">
                                 <div class="accordion-body">
                                     <p>Courses:</p>
                                     <ul>
@@ -147,7 +149,7 @@
                                     <i class="fa-brands fa-java"><span class="font-awesome-text"> Java</span></i>
                                 </button>
                               </h4>
-                              <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                              <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordion-flush-langs">
                                 <div class="accordion-body">
                                     <p>Courses:</p>
                                     <ul>
@@ -191,7 +193,7 @@
                                     <i class="fa-brands fa-python"><span class="font-awesome-text"> Python</span></i>
                                 </button>
                               </h4>
-                              <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                              <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordion-flush-langs">
                                 <div class="accordion-body">
                                     <p>Courses:</p>
                                     <ul>
@@ -210,7 +212,7 @@
                                     <i class="fa-solid fa-c"><span class="font-awesome-text"  style="font-weight: 400;"> C and Assembly</span></i>
                                   </button>
                                 </h4>
-                                <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                                <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordion-flush-langs">
                                   <div class="accordion-body">
                                     <p>Courses:</p>
                                     <ul>
