--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="col-md-7 about-container">
                 <div class="about" id="about">
                     <h1 >Software Developer</h1>
-                    <section>
+                    <section id="about">
                         <h2>About</h2>
                         <p>
                             I am Chase, a recent computer science graduate with a
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                     </section>
-                    <section>
+                    <section id="languages-section">
                         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
                         <h2>Languages & Tools</h2>
@@ -272,6 +272,17 @@
                             </li>
                           </ul>
 
+                    </section>
+                    <section id="projects">
+                        <h2>Projects:</h2>
+                        <div class="card shadow text-center" style="width: 25rem;">
+                            <img src="./images/game-of-life.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Conway's Game of Life</h5>
+                              <p class="card-text">Conway's Game of Life is a 0 player game where patterns evolve on a grid based on simple rules about the status of neighboring cells.</p>
+                              <a href="./Conways-Game-of-Life/index.html" target="_blank" class="btn btn-primary">Check it out</a>
+                            </div>
+                        </div>
                     </section>
                 </div>
 
