--- a/Conways-Game-of-Life/index.html
+++ b/Conways-Game-of-Life/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="app.css" />
+        <title>Conway's Game of Life</title>
     </head>
     <body>
 
