--- a/index.html
+++ b/index.html
@@ -275,21 +275,21 @@
                     </section>
                     <section id="projects">
                         <h2>Projects:</h2>
-                        <div class="card shadow text-center" style="width: 25rem;">
+                        <div class="card shadow text-center" style="width: 30rem;">
                             <img src="./images/game-of-life.png" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Conway's Game of Life</h5>
                               <p class="card-text">Conway's Game of Life is a 0 player game where patterns evolve on a grid based on simple rules about the status of neighboring cells.</p>
                               <a href="./Conways-Game-of-Life/index.html" target="_blank" class="btn btn-primary">Check it out</a>
-                              <a href="./Conways-Game-of-Life/index.html" target="_blank" class="btn btn-primary">GitHub</a>
+                              <a href="https://github.com/roecha/Conways-Game-of-Life" target="_blank" class="btn btn-primary"><i class="fa-brands fa-github nav-item" ></i> GitHub</a>
                             </div>
                         </div>
                         <div class="card shadow text-center" id="spotifaves-card">
-                            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                            <div id="carouselInd" class="carousel slide" data-ride="carousel">
                                 <ol class="carousel-indicators">
-                                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                                  <li data-target="#carouselInd" data-slide-to="0" class="active"></li>
+                                  <li data-target="#carouselInd" data-slide-to="1"></li>
+                                  <li data-target="#carouselInd" data-slide-to="2"></li>
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
@@ -308,11 +308,11 @@
                                         </div>
                                       </div>
                                 </div>
-                                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                <a class="carousel-control-prev" href="#carouselInd" role="button" data-slide="prev">
                                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                   <span class="sr-only">Previous</span>
                                 </a>
-                                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                                <a class="carousel-control-next" href="#carouselInd" role="button" data-slide="next">
                                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                   <span class="sr-only">Next</span>
                                 </a>
@@ -321,8 +321,8 @@
                             <div class="card-body">
                               <h5 class="card-title">SpotiFaves</h5>
                               <p class="card-text">Here is a quick overview of an app that allows you to view your spotify listening data.</p>
-                              <a href="./Conways-Game-of-Life/index.html" target="_blank" class="btn btn-primary">Check it out</a>
-                              <a href="./Conways-Game-of-Life/index.html" target="_blank" class="btn btn-primary">GitHub</a>
+                              <a href="./spotifaves.html" class="btn btn-primary">Check it out</a>
+                              <a href="https://github.com/roecha/Conways-Game-of-Life" target="_blank" class="btn btn-primary"><i class="fa-brands fa-github nav-item" ></i> GitHub</a>
                             </div>
                         </div>
                     </section>
